--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
     "sass": "^1.55.0",
+    "stylelint": "^14.13.0",
+    "stylelint-config-standard-scss": "^5.0.0",
     "typescript": "^4.5.5",
     "vite": "^2.9.12"
   },
