--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     "Pokeapi",
     "pokeball",
     "pokedex",
-    "POKÉDEX"
+    "POKÉDEX",
+    "Pokemons"
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true,
